--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#8BF1C7"
-backgroundColor="#D8F5CB"
+primaryColor="#fdfaa0"
+backgroundColor="#6ab2f2"
 secondaryBackgroundColor="#A7BFEF"
 textColor="#0A145C"
 font="serif"
