--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#fdfaa0"
 backgroundColor="#6ab2f2"
-secondaryBackgroundColor="#A7BFEF"
+secondaryBackgroundColor="#fdfaa0"
 textColor="#0A145C"
 font="serif"
