--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#fdfaa0"
-backgroundColor="#6ab2f2"
-secondaryBackgroundColor="#fdfaa0"
+backgroundColor="#fdfaa0"
+secondaryBackgroundColor="#6ab2f2"
 textColor="#0A145C"
 font="serif"
