--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#fefcbf"
 backgroundColor="#fefcbf"
-secondaryBackgroundColor="#6ab2f2"
+secondaryBackgroundColor="#b2efe5"
 textColor="#0A145C"
 font="serif"
